# SMARTER-database

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .renvignore  .travis.yml  HISTORY.rst  LICENSE  Makefile  README.md  TODO.md  assemblies.mk  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_environment.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint-workflow.yml  pytest-workflow.yml  tox-workflow.yml
data/processed/: README.txt.ftp
database/: .gitignore  README.md  docker-compose.yml
database/docker-entrypoint-initdb.d/: 00-replica-init.js  01-create_collections.js
database/mongodb-home/: .mongorc.js
docs/: Makefile  commands.rst  conf.py  data-import.rst  getting-started.rst  index.rst  initialize.rst  make.bat  modules.rst
docs/_static/: DU186191_327_to_top.csv  OAR1_103790218_to_top.csv
docs/modules/: affymetrix.rst  common.rst  dbsnp.rst  illumina.rst  plinkio.rst  smarterdb.rst  snpchimp.rst  utils.rst
notebooks/exploratory/: .Rprofile  .gitignore  0.1-bunop-describe-TEXEL_INIA_UY.ipynb  0.1.0-bunop-describe-TEXEL_INIA_UY.ipynb  0.1.1-bunop-describe-texel-genotype.ipynb  0.1.1_describe_texel_genotype.ipynb  0.10.0-bunop-describe-ovine_SNP50.ipynb  0.10.1-bunop-reverse_geocoding-ovine_SNP50.ipynb  0.10.2-bunop-sheep-hapmap-v2.ipynb  0.11.0-bunop-allele_coding_format.ipynb  0.12.0-bunop-check_snpchimp_import.ipynb  0.13.0-bunop-describe_adaptmap.ipynb  0.14.0-bunop-check_sheep_coordinates.ipynb  0.14.0-bunop-exploring_greek_data.ipynb  0.14.1-bunop-about_sheep_coordinates.ipynb  0.15.0-bunop-check_goat_coordinates.ipynb  0.15.0-bunop-check_sheep_coordinates.ipynb  0.15.1-bunop-about_sheep_coordinates.ipynb  0.16.0-bunop-check_goat_coordinates.ipynb  (+36 more)
reports/: 0.1.0-bunop-sheep_dimensionality_reduction.ipynb
src/: __init__.py
tests/: common.py
(+118 files in other folders)
