[tool.poetry]
name = "src"
version = "0.4.10"
description = "Smarter Database aims to deal with Smarter data"
authors = ["Paolo Cozzi <bunop@libero.it>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
jupyterlab = "^4.2.0"
coverage = "^7.5.1"
pytest = "^8.2.1"
click = "^8.1.7"
pycountry = "^23.12.11"
mongoengine = "^0.28.2"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
plinkio = {git = "https://github.com/bunop/libplinkio.git", rev = "bc1c13507cf5c2d60ffe20e12a1997021f37ceb4"}
biopython = "^1.83"
lxml = "^5.2.2"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
click-option-group = "^0.5.6"
mongomock = "^4.1.2"
flake8 = "^7.0.0"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-click = "^6.0.0"
autodocsumm = "^0.2.12"
matplotlib = "^3.9.0"
shapely = "^2.0.4"
geopandas = "^0.14.4"
pyensemblrest = "^0.2.3"
ipywidgets = "^8.1.2"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
